--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ rp-pico = "0.5"
 # For linking
 rp2040-boot2 = { version = "0.2.1" }
 
+# RTIC
+cortex-m-rtic = "1.0.0"
+
 
 # cargo build/run
 [profile.dev]
