--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ defmt-rtt = "0.3"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 # We're using a Pico by default on this template
-rp-pico = "0.5"
+rp-pico = "0.6.0"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.3"
@@ -27,7 +27,8 @@ rp2040-boot2 = { version = "0.2.1" }
 
 # Required for RTIC
 cortex-m-rtic = "1.0.0"
-rp2040-monotonic = "1.2.0"
+#rp2040-monotonic = "1.2.0"
+rp2040-monotonic = "1.2"
 
 
 # cargo build/run
